; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/netfilter/ipvs/extr_ip_vs_proto_ah_esp.c_ah_esp_debug_packet.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/netfilter/ipvs/extr_ip_vs_proto_ah_esp.c_ah_esp_debug_packet.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ip_vs_protocol = type { i32 }
%struct.sk_buff = type { i64 }

@ETH_P_IPV6 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ip_vs_protocol*, %struct.sk_buff*, i32, i8*)* @ah_esp_debug_packet to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ah_esp_debug_packet(%struct.ip_vs_protocol* %0, %struct.sk_buff* %1, i32 %2, i8* %3) #0 {
  %5 = alloca %struct.ip_vs_protocol*, align 8
  %6 = alloca %struct.sk_buff*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  store %struct.ip_vs_protocol* %0, %struct.ip_vs_protocol** %5, align 8
  store %struct.sk_buff* %1, %struct.sk_buff** %6, align 8
  store i32 %2, i32* %7, align 4
  store i8* %3, i8** %8, align 8
  %9 = load %struct.ip_vs_protocol*, %struct.ip_vs_protocol** %5, align 8
  %10 = load %struct.sk_buff*, %struct.sk_buff** %6, align 8
  %11 = load i32, i32* %7, align 4
  %12 = load i8*, i8** %8, align 8
  %13 = call i32 @ah_esp_debug_packet_v4(%struct.ip_vs_protocol* %9, %struct.sk_buff* %10, i32 %11, i8* %12)
  ret void
}

declare dso_local i32 @ah_esp_debug_packet_v4(%struct.ip_vs_protocol*, %struct.sk_buff*, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
